# cppkafka-docker-setup

./: CMakeLists.txt  Dockerfile  client.cpp  docker-compose.yml  docker_script.bat  docker_script.sh  readme.md  report.md  server.cpp
